--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anugeetika Jain, MA LPC - Licensed Professional Counselor</title>
+    <title>Anugeetika Jain, M.A., LPC</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
         <nav class="nav">
             <div class="nav-brand">
                 <h2>Anugeetika Jain</h2>
-                <p>MA, LPC</p>
+                <p>M.A., LPC</p>
             </div>
             <ul class="nav-menu">
                 <li><a href="#about">About</a></li>
