Adds fixes based on feedback and enables video

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
                 <li><a href="#approach">Approach</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -32,7 +31,6 @@
             </div>
             <div class="hero-text">
                 <h1>Compassionate Care for Your Mental Health Journey</h1>
-                <p class="hero-subtitle">Creating a safe, supportive space where healing and growth can flourish. Together, we'll navigate life's challenges with understanding and evidence-based therapeutic approaches.</p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Schedule Consultation</a>
                     <a href="#about" class="btn btn-secondary">Learn More</a>
@@ -65,41 +63,23 @@
                         </div>
                         <div class="credential-item">
                             <h4>SPECIALIZATION</h4>
-                            <p>Trauma, Anxiety, Depression</p>
+                            <p>Trauma, Anxiety, Family Issues, Depression, Relationship Issues, Communication Problems</p>
                         </div>
                     </div>
                 </div>
                 
                 <div class="about-video">
-                    <div class="video-placeholder">
-                        <p>Personal Introduction Video</p>
-                        <p class="video-note">Video file too large for GitHub hosting. Please contact for video access.</p>
+                    <div class="about-video">
+                        <video controls width="100%" poster="assets/thumbnail.jpg">
+                            <source src="https://github.com/jkshtj/website-anugeetika-vora/releases/download/v0.0/Vertical_MusicandRetouch.MOV" type="video/mp4">
+                        </video>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section id="services" class="services">
-        <div class="container">
-            <h2>Services Offered</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">🌱</div>
-                    <h3>Trauma Release</h3>
-                    <p>Evidence-based tools and techniques for adults and children to process and release trauma, helping you move forward with healing and resilience.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">🧘‍♀️</div>
-                    <h3>Anxiety & Depression Support</h3>
-                    <p>Specialized approaches to help adults and children develop effective coping strategies for managing anxiety and depression symptoms.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Approach Section -->
+<!-- Approach Section -->
     <section id="approach" class="approach">
         <div class="container">
             <div class="approach-content">
@@ -120,10 +100,10 @@
                     <div class="approach-methods">
                         <h4>Evidence-Based Approaches:</h4>
                         <ul>
+                            <li>Eye Movement Desensitization and Reprocessing (EMDR)</li>
                             <li>Cognitive Behavioral Therapy (CBT)</li>
-                            <li>Client-Centered Therapy</li>
-                            <li>EMDR (Eye Movement Desensitization and Reprocessing)</li>
-                            <li>Trauma-Informed Care</li>
+                            <li>Cognitive Processing Therapy (CPT)</li>
+                            <li>Client Centered Behavior Therapy</li>
                         </ul>
                     </div>
                 </div>
@@ -148,11 +128,11 @@
                     </div>
                     <div class="contact-item">
                         <h4>Phone</h4>
-                        <p>(281) 909-1023</p>
+                        <p>9363679045</p>
                     </div>
                     <div class="contact-item">
                         <h4>Location</h4>
-                        <p>Houston, TX<br>Telehealth Available</p>
+                        <p>16850 Saturn Lane <br> Houston TX 77058</p>
                     </div>
                     <div class="contact-item">
                         <h4>Hours</h4>
@@ -173,7 +153,6 @@
                 </div>
                 <div class="footer-links">
                     <a href="#about">About</a>
-                    <a href="#services">Services</a>
                     <a href="#approach">Approach</a>
                     <a href="#contact">Contact</a>
                 </div>
